# B1Work

./: 22092021command.txt  24092021command.txt  CMakeLists.txt  README  exampleB1.cc  run1.mac
include/: B1ActionInitialization.hh  B1DetectorConstruction.hh  B1EventAction.hh  B1PhysicsList.hh  FKHit.hh  FKSD.hh  GunPrimaryGeneratorAction.hh  HistoManager.hh  RunAction.hh
src/: B1ActionInitialization.cc  B1DetectorConstruction.cc  B1EventAction.cc  B1PhysicsList.cc  B1PrimaryGeneratorAction.cc  B1RunAction.cc  B1SteppingAction.cc  FKHit.cc  FKSD.cc  GunPrimaryGeneratorAction.cc  HistoManager.cc  RunAction.cc
